[package]
name = "nanohue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
log = { version = "0.4", features = ["std", "serde"] }
simplelog = "0.12.1"
serde_yaml = "0.9.29"
ndarray = "0.15.6"
nalgebra = "0.32.3"
palette = "0.7.3"
